<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_date_default"
        android:key="@string/check_box_date_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/check_box_date_label" />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_bool_sort_by_date"
        android:key="@string/check_box_sort_key"
        android:summaryOff="@string/sort_by_name"
        android:summaryOn="@string/sort_by_date"
        android:title="@string/check_box_sort_label" />


   <CheckBoxPreference
        android:defaultValue="@bool/pref_request_deleting"
        android:key="@string/accept_deleting_key"
        android:summaryOff="@string/not_request"
        android:summaryOn="@string/request"
        android:title="@string/check_box_accept_del_label" />



    <ListPreference
        android:defaultValue="@string/pref_color_FloralWhite_value"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_values"
        android:key="@string/color_key"
        android:title="@string/color_label" />

</PreferenceScreen>